--- a/styles/bootstrap/_utilities.scss
+++ b/styles/bootstrap/_utilities.scss
@@ -1,3 +1,7 @@
+@use "sass:map";
+@use "mixins/breakpoints";
+@use "variables";
+
 // Utility classes for flexbox
 // https://getbootstrap.com/docs/5.3/utilities/flex/
 
@@ -190,9 +194,9 @@
 }
 
 // Responsive variants
-@each $breakpoint in map-keys($grid-breakpoints) {
-  @include media-breakpoint-up($breakpoint) {
-    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
+@each $breakpoint in map.keys(variables.$grid-breakpoints) {
+  @include breakpoints.media-breakpoint-up($breakpoint) {
+    $infix: breakpoints.breakpoint-infix($breakpoint, variables.$grid-breakpoints);
 
     .d#{$infix}-flex {
       display: flex;
