--- a/styles/bootstrap/mixins/_clearfix.scss
+++ b/styles/bootstrap/mixins/_clearfix.scss
@@ -1,9 +1,9 @@
-// scss-docs-start clearfix
-@mixin clearfix() {
-  &::after {
-    display: block;
-    clear: both;
-    content: "";
-  }
-}
-// scss-docs-end clearfix
+// // scss-docs-start clearfix
+// @mixin clearfix() {
+//   &::after {
+//     display: block;
+//     clear: both;
+//     content: "";
+//   }
+// }
+// // scss-docs-end clearfix
