--- a/styles/bootstrap/mixins/_lists.scss
+++ b/styles/bootstrap/mixins/_lists.scss
@@ -1,7 +1,7 @@
-// Lists
+// // Lists
 
-// Unstyled keeps list items block level, just removes default browser padding and list-style
-@mixin list-unstyled {
-  padding-left: 0;
-  list-style: none;
-}
+// // Unstyled keeps list items block level, just removes default browser padding and list-style
+// @mixin list-unstyled {
+//   padding-left: 0;
+//   list-style: none;
+// }
